--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
   <h3>Book by Category</h3>
   <div class="cards">
     <div class="card">
-      <img src="F:\Web design assignment\movies.webp" style="width:80%;">
+      <img src="movies.webp" style="width:80%;">
       <h4>Movies</h4>
       <p>Latest blockbusters and cinema experiences near you.</p>
     </div>
 
     <div class="card">
-      <img src="F:\Web design assignment\concert.webp" style="width:80%;">
+      <img src="concert.webp" style="width:80%;">
       <h4>Concerts</h4>
       <p>Find live shows, tours, and music festivals happening now.</p>
     </div>
 
     <div class="card">
-      <img src="F:\Web design assignment\parties.webp" style="width:80%;">
+      <img src="parties.webp" style="width:80%;">
       <h4>Parties</h4>
       <p>Exclusive parties and nightlife events around your city.</p>
     </div>
@@ -74,17 +74,17 @@
   <h3>Top Picks</h3>
   <div class="cards">
     <div class="card">
-		<img src="F:\Web design assignment\top picks\avatar fires and ash.webp" style="width:100%;"> <h4>Movie: Avatar Fire & Ash</h4>
+		<img src="top picks\avatar fires and ash.webp" style="width:100%;"> <h4>Movie: Avatar Fire & Ash</h4>
 		<p>Action/Adventure <br>| Coming Soon</p>
 	</div>
 	
     <div class="card">
-		<img src="F:\Web design assignment\top picks\coldplay.webp" style="width:100%;"><h4>Concert: Coldplay Live</h4>
+		<img src="top picks\coldplay.webp" style="width:100%;"><h4>Concert: Coldplay Live</h4>
 		<p>Jan 2026 <br>| London</p>
 	</div>
 	
     <div class="card">
-		<img src="F:\Web design assignment\top picks\miami.webp" style="width:100%;"><h4>Beach Party 2026</h4>
+		<img src="top picks\miami.webp" style="width:100%;"><h4>Beach Party 2026</h4>
 		<p>Feb 2026<br>| Miami Beach</p>
 	</div>
   </div>
@@ -101,3 +101,4 @@
 </footer>
 </body>
 </html>
+
